# FastRTC-Compact

./: .gitignore  404.html  LICENSE  README.md  index.html  justfile  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
advanced-configuration/: index.html
backend/fastrtc/: __init__.py  reply_on_pause.py  reply_on_stopwords.py  stream.py  utils.py  webrtc.py  webrtc_connection_mixin.py  websocket.py
backend/fastrtc/pause_detection/: __init__.py  silero.py  smart_turn.py  whisper_features.py
backend/fastrtc/speech_to_text/: stt_.py
cookbook/: index.html
demo/echo_audio/: app.py  index.html  requirements.txt
deployment/: index.html
docs/: index.md
docs/fastrtc-compact/: GitHub Release Guide.md  PyPI Release Guide.md  VERSIONING.md  gradio removal.md  librosa removal.md
docs/reference/: credentials.md  reply_on_pause.md  stream.md  utils.md
docs/userguide/: api.md  audio.md  streams.md  video.md
faq/: index.html
fastrtc-compact/GitHub Release Guide/: index.html
fastrtc-compact/PyPI Release Guide/: index.html
fastrtc-compact/VERSIONING/: index.html
fastrtc-compact/gradio removal/: index.html
fastrtc-compact/librosa removal/: index.html
overrides/partials/: header.html
reference/credentials/: index.html
reference/reply_on_pause/: index.html
reference/stream/: index.html
reference/stream_handlers/: index.html
reference/utils/: index.html
speech_to_text_gallery/: index.html
text_to_speech_gallery/: index.html
turn_taking_gallery/: index.html
userguide/api/: index.html
userguide/audio/: index.html
userguide/audio-video/: index.html
userguide/gradio/: index.html
userguide/streams/: index.html
userguide/video/: index.html
userguide/webrtc_docs/: index.html
userguide/websocket_docs/: index.html
utils/: index.html
